Add default JMV settings env [#159104425]